kg8s/seed/seed006-oidc/layer0/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app: argocd
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
  labels:
    app: gitea
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    app: vault
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    app: keycloak
    istio-injection: enabled
